完成：產品頁

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
       <div  class="banner bgs-cover"></div>
       <!-- 募款 -->
       <div id="Service"
-        class="row d-flex justify-content-center row-cols-1 row-cols-lg-2 pt-5 mx-5 px-5 g-0"
+        class="flex-xl-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-5 px-5 g-0"
       >
         <div class="col">
           <img
@@ -90,11 +90,12 @@
             <p>
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
+              <br>
               Registered Jersey <br />
               charities and other charities registered as charities under the
               law of the United Kingdom, <br />
               on the basis the charity carries out <br />
-              substantial charity activities in or from within Jersey, are
+              substantial charity activities in or from within Jersey
               <br />
               welcome to apply to be members. <br />
             </p>
