--- a/home.html
+++ b/home.html
@@ -71,19 +71,19 @@
       <!-- banner -->
       <div  class="banner bgs-cover"></div>
       <!-- 募款 -->
+      <!-- row 都加 flex-row 比較清楚~~~ -->
       <div id="Service"
-        class="flex-xl-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-5 px-5 g-0"
+        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-md-2 pt-5 mx-md-5 px-md-5 
+              mx-1 px-1 g-3"
       >
-        <div class="col">
+        <div class="col d-flex align-items-center justify-content-center">
           <img
-            class="of-cover"
-            height="486"
-            width="548"
+            class="of-cover money_img "
             src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
             alt="義賣球衣"
           />
         </div>
-        <div class="col d-flex align-items-center">
+        <div class="col ">
           <div class="money">
             <p class="money_service">Service</p>
             <h2 class="money_title text-nbaBlue">FUNDRAISING</h2>
