修正：產品的側欄和圖片 hover

--- a/allstar.html
+++ b/allstar.html
@@ -17,18 +17,18 @@
       >
         <!-- 包品牌 -->
         <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex ">
+          <div class="d-flex">
             <div>
               <a class="navbar-brand" href="#"> JerseyTown </a>
             </div>
             <a class="align-self-center text-decoration-none" href="">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2 ">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
           <div class="ms-3">
             <button
-              class="navbar-toggler "
+              class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
           </div>
           <!--  -->
@@ -45,20 +45,24 @@
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link p-3 active" aria-current="page" href="home.html">Home</a>
+              <li class="nav-item">
+                <a class="nav-link p-3 active" aria-current="page" href="#"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3 " href="#Service">Service</a>
+                <a class="nav-link p-3" href="customzied.html">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Product">Product</a>
+                <a class="nav-link p-3" href="newproduct.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Rank">Rank</a>
+                <a class="nav-link p-3" href="allstar.html">Rank</a>
               </li>
               <li class="hvr-grow-shadow ms-1">
-                <button class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed">
+                <button
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                >
                   <a class="text-decoration-none text-white" type="submit">
                     Customized
                   </a>
@@ -69,47 +73,92 @@
         </div>
       </nav>
       <!-- banner -->
-      <div  class="allstar_banner bgs-cover"></div>
+      <div class="allstar_banner bgs-cover"></div>
       <!-- allstar -->
-      <div class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3">
-        <div class="col d-flex flex-column  align-items-center ">
-          <div class="allstar_bg  d-flex justify-content-center align-items-center">
-            <img class=" of-contain " src="./nbaWeb/PNG-images-NBA-Players-36png.png" height="200" width="200" alt=""> 
+      <div
+        class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
+      >
+        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+          <div
+            class="allstar_bg d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="of-contain"
+              src="./nbaWeb/PNG-images-NBA-Players-36png.png"
+              height="200"
+              width="200"
+              alt=""
+            />
           </div>
           <p class="text-pickYellow">NO.1</p>
-          <h3>KOBE BRYANT</h3>
+          <h3 class="text-center">KOBE BRYANT</h3>
           <p>BLACK MAMBA</p>
         </div>
-        <div class="col d-flex flex-column  align-items-center ">
-          <div class="allstar_bg  d-flex justify-content-center align-items-center">
-            <img class=" of-contain " src="./nbaWeb/PNG-images-NBA-Players-3png.png" height="200" width="200" alt=""> 
+        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+          <div
+            class="allstar_bg d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="of-contain"
+              src="./nbaWeb/PNG-images-NBA-Players-3png.png"
+              height="200"
+              width="200"
+              alt=""
+            />
           </div>
           <p class="text-pickYellow">NO.2</p>
-          <h3>LEBRON JAMES</h3>
+          <h3 class="text-center">LEBRON JAMES</h3>
           <p>KING JAMES</p>
         </div>
-        <div class="col d-flex flex-column  align-items-center ">
-          <div class="allstar_bg  d-flex justify-content-center align-items-center">
-            <img class=" of-cover op-top" src="./nbaWeb/PNG-images-NBA-Players-1png.png" height="200" width="200" alt=""> 
+        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+          <div
+            class="allstar_bg d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="of-cover op-top"
+              src="./nbaWeb/PNG-images-NBA-Players-1png.png"
+              height="200"
+              width="200"
+              alt=""
+            />
           </div>
           <p class="text-pickYellow">NO.3</p>
-          <h3>STEPHEN CURRY</h3>
+          <h3 class="text-center">STEPHEN CURRY</h3>
           <p>LOGOSHOOT GOD</p>
         </div>
-        <div class="col d-flex flex-column  align-items-center ">
-          <div class="allstar_bg  d-flex justify-content-center align-items-center">
-            <img class=" of-cover op-top " src="./nbaWeb/PNG-images-NBA-Players-58png.png" height="200" width="200" alt=""> 
+        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+          <div
+            class="allstar_bg d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="of-cover op-top"
+              src="./nbaWeb/PNG-images-NBA-Players-58png.png"
+              height="200"
+              width="200"
+              alt=""
+            />
           </div>
           <p class="text-pickYellow">NO.4</p>
-          <h3 class="text-center">RUSSELL <br> WESTBROOK</h3>
+          <h3 class="text-center" class="text-center">
+            RUSSELL <br />
+            WESTBROOK
+          </h3>
           <p>TRIPLE-DOUBLES GOD</p>
         </div>
-        <div class="col d-flex flex-column  align-items-center ">
-          <div class="allstar_bg  d-flex justify-content-center align-items-center">
-            <img class=" of-cover op-top " src="./nbaWeb/PNG-images-NBA-Players-60png.png" height="200" width="200" alt=""> 
+        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+          <div
+            class="allstar_bg d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="of-cover op-top"
+              src="./nbaWeb/PNG-images-NBA-Players-60png.png"
+              height="200"
+              width="200"
+              alt=""
+            />
           </div>
           <p class="text-pickYellow">NO.5</p>
-          <h3>KRIE IRVING</h3>
+          <h3 class="text-center">KRIE IRVING</h3>
           <p>DRIBBLE GOD</p>
         </div>
       </div>
@@ -120,12 +169,7 @@
           class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
         >
           <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img
-              class=""
-              height="130"
-              src="nbaWeb/1506074059.svg"
-              alt=""
-            />
+            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
@@ -157,10 +201,10 @@
           <img
             onmouseover="hover_custom(this);"
             onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-01.svg"
+            src="./nbaWeb/silhouette-basket-05.svg"
             alt=""
-            height="80"
-            width="100"
+            height="150"
+            width="150"
             class="custom_img_after position-fixed bottom-0 end-0"
             data-bs-toggle="tooltip"
             data-bs-placement="top"
