--- a/home.html
+++ b/home.html
@@ -17,18 +17,18 @@
       >
         <!-- 包品牌 -->
         <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex ">
+          <div class="d-flex">
             <div>
               <a class="navbar-brand" href="#"> JerseyTown </a>
             </div>
             <a class="align-self-center text-decoration-none" href="">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2 ">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
           <div class="ms-3">
             <button
-              class="navbar-toggler "
+              class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
           </div>
           <!--  -->
@@ -45,21 +45,25 @@
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link p-3 active" aria-current="page" href="#">Home</a>
+              <li class="nav-item">
+                <a class="nav-link p-3 active" aria-current="page" href="home.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3 " href="#Service">Service</a>
+                <a class="nav-link p-3" href="register.html">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Product">Product</a>
+                <a class="nav-link p-3" href="newproduct.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Rank">Rank</a>
+                <a class="nav-link p-3" href="allstar.html">Rank</a>
               </li>
               <li class="hvr-grow-shadow ms-1">
-                <button class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed">
-                  <a class="text-decoration-none text-white" type="submit">
+                <button
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                >
+                  <a class="text-decoration-none text-white" type="submit" href="customzied.html">
                     Customized
                   </a>
                 </button>
@@ -69,14 +73,16 @@
         </div>
       </nav>
       <!-- banner -->
-      <div  class="banner bgs-cover"></div>
+      <div class="banner bgs-cover"></div>
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
-      <div id="Service"
-        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-md-2 pt-5 mx-md-5 px-md-5 
-              mx-1 px-1 g-5"
+      <div
+        id="Service"
+        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-md-2 pt-5 mx-md-5 px-md-5 mx-1 px-1 g-5"
       >
-        <div class="col d-flex align-items-center justify-content-center me-md-5">
+        <div
+          class="col d-flex align-items-center justify-content-center me-md-5"
+        >
           <img
             class="of-cover money_img w-100"
             height="486"
@@ -85,14 +91,14 @@
             alt="義賣球衣"
           />
         </div>
-        <div class="col" style="width:380px">
+        <div class="col" style="width: 380px">
           <div class="money w-100">
             <p class="fs-4 text-pickYellow">Service</p>
-            <h2 class=" text-nbaBlue">EVERYBODY FUNDRAISING</h2>
+            <h2 class="text-nbaBlue">EVERYBODY FUNDRAISING</h2>
             <p class="fs-6">
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
-              <br>
+              <br />
               Registered Jersey <br />
               charities and other charities registered as charities under the
               law of the United Kingdom, <br />
@@ -105,7 +111,10 @@
         </div>
       </div>
       <!-- 最新球衣 -->
-      <div id="Product" class=" my-5 d-flex justify-content-center align-items-center text-nbaRed">
+      <div
+        id="Product"
+        class="my-5 d-flex justify-content-center align-items-center text-nbaRed"
+      >
         <h2>NEW</h2>
         <img
           src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
@@ -115,71 +124,72 @@
         />
         <h2>PRODUCTS</h2>
       </div>
-        <div class="row row-cols-2 row-cols-lg-4 g-4 px-3">
-          <div class="col overflow-hidden">
-            <div class="card w-100 position-relation" data-num="1">
-              <div class="new_product_img">
-                <h6 >Player</h6>
-                <h4>Kobe Bryant</h4>
-              </div>
-              <img
-                data-num="1"
-                height="312"
-                width="312"
-                class="card-img of-cover"
-                src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
-                alt="new1"
-              />
+      <div class="row row-cols-2 row-cols-lg-4 g-4 px-3">
+        <div class="col overflow-hidden">
+          <div class="card w-100 position-relation" data-num="1">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Kobe Bryant</h4>
             </div>
-          </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="2">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Derrick Rose</h4>
-              </div>
-              <img
-                data-num="2"
-                height="312"
-                width="312"                class="card-img of-cover"
-                src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
-                alt="new2"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="3">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Kevin Durant</h4>
-              </div>
-              <img
-                data-num="3"
-                height="312"
-                width="312"                
-                class="card-img of-cover"
-                src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
-                alt="new3"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="4">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Stephen Curry</h4>
-              </div>
-              <img
-                data-num="4"
-                height="312"
-                width="312"                
-                class="card-img of-cover"
-                src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
-                alt="new4"
-              />
-            </div>
+            <img
+              data-num="1"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
+              alt="new1"
+            />
           </div>
         </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="2">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Derrick Rose</h4>
+            </div>
+            <img
+              data-num="2"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
+              alt="new2"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="3">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Kevin Durant</h4>
+            </div>
+            <img
+              data-num="3"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
+              alt="new3"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="4">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Stephen Curry</h4>
+            </div>
+            <img
+              data-num="4"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
+              alt="new4"
+            />
+          </div>
+        </div>
+      </div>
 
       <div class="text-center mt-4">
         <a
@@ -194,7 +204,10 @@
       </div>
 
       <!-- 銷售排行 -->
-      <div id="Ranking" class="d-flex justify-content-center align-items-center text-nbaRed mt-5">
+      <div
+        id="Ranking"
+        class="d-flex justify-content-center align-items-center text-nbaRed mt-5"
+      >
         <h2>TOP</h2>
         <img
           src="nbaWeb/Lovepik_com-401319703-basketball.png"
@@ -209,7 +222,7 @@
       </p>
       <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative shadow" style="height:424px ;">
+          <div class="card position-relative shadow" style="height: 424px">
             <img
               data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -241,9 +254,9 @@
           </div>
         </div>
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative shadow" style="height:424px ;">
+          <div class="card position-relative shadow" style="height: 424px">
             <img
-            data-num="002"
+              data-num="002"
               src="nbaWeb/PNG-images-NBA-Players-28png.png"
               height="300"
               class="card-img-top of-none op-top position-absolute mt-n5"
@@ -270,9 +283,9 @@
           </div>
         </div>
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative shadow" style="height:424px ;">
+          <div class="card position-relative shadow" style="height: 424px">
             <img
-            data-num="003"
+              data-num="003"
               src="nbaWeb/PNG-images-NBA-Players-1png.png"
               height="300"
               class="card-img-top of-none op-top position-absolute mt-n5"
@@ -302,28 +315,21 @@
         </div>
       </div>
 
-      <div
-        class="sell_more text-center border-nbaRed border-bottom border-3"
-      >
+      <div class="sell_more text-center ">
         <a
           type="button"
-          href=""
+          href="allstar.html"
           class="btn btn-outline-nbaBlue rounded-pill my-5 fs-5"
           >SEE MORE LISTS</a
         >
       </div>
       <!-- 徵才 -->
-      <div class="container-lg">
+      <div class="container-lg border-nbaRed border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
         >
           <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img
-              class=""
-              height="130"
-              src="nbaWeb/1506074059.svg"
-              alt=""
-            />
+            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
