--- a/newproduct.html
+++ b/newproduct.html
@@ -17,18 +17,18 @@
       >
         <!-- 包品牌 -->
         <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex ">
+          <div class="d-flex">
             <div>
               <a class="navbar-brand" href="#"> JerseyTown </a>
             </div>
             <a class="align-self-center text-decoration-none" href="">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2 ">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
           <div class="ms-3">
             <button
-              class="navbar-toggler "
+              class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
           </div>
           <!--  -->
@@ -45,21 +45,32 @@
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link p-3 active" aria-current="page" href="#">Home</a>
+              <li class="nav-item">
+                <a
+                  class="nav-link p-3 active"
+                  aria-current="page"
+                  href="home.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3 " href="#Service">Service</a>
+                <a class="nav-link p-3" href="register.html">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Product">Product</a>
+                <a class="nav-link p-3" href="newproduct.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Rank">Rank</a>
+                <a class="nav-link p-3" href="allstar.html">Rank</a>
               </li>
               <li class="hvr-grow-shadow ms-1">
-                <button class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed">
-                  <a class="text-decoration-none text-white" type="submit">
+                <button
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                >
+                  <a
+                    class="text-decoration-none text-white"
+                    type="submit"
+                    href="customzied.html"
+                  >
                     Customized
                   </a>
                 </button>
@@ -69,114 +80,138 @@
         </div>
       </nav>
       <!-- 最新球衣 -->
-      <div id="Product" class="new_product text-center my-5">
-        <span>NEW</span>
+      <div
+        id="Product"
+        class="my-5 d-flex justify-content-center align-items-center text-nbaRed"
+      >
+        <h2>NEW</h2>
         <img
           src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
           height="80"
           alt="recentlyLogo"
           class=""
         />
-        <span>PRODUCTS</span>
+        <h2>PRODUCTS</h2>
       </div>
       <div class="container px-5">
-        <div class="row row-cols-1 row-cols-lg-12 ">
+        <div class="row row-cols-1 row-cols-lg-12">
           <!-- 側欄 -->
           <!-- 上面row響應 下面col也要響應~~~ -->
-            <div class="col col-lg-3 lh-lg aside">
-              <h3 class="">Player</h3>
-              <ul class="list-unstyled d-flex justify-content-around mx-5 my-3" >
-                <li><a class="text-decoration-none d-block" href="#"> All</a></li>
-                <li><a class="text-decoration-none d-block" href="#"> Kobe</a></li>
-                <li><a class="text-decoration-none d-block" href="#"> Rose</a></li>
-                <li><a class="text-decoration-none d-block" href="#"> Durant</a></li>
-                <li><a class="text-decoration-none d-block" href="#"> James</a></li>
-              </ul>
-            </div>
+          <div class="col col-lg-3 lh-lg aside">
+            <h3 class="text-center text-md-start">Player</h3>
+            <ul
+              class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3"
+            >
+              <li class="">
+                <a class="text-decoration-none d-block active" href="#"
+                  ><span class=""> － </span> All</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none d-block" href="#"
+                  ><span> － </span> Kobe</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none d-block" href="#"
+                  ><span> － </span> Rose</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none d-block" href="#"
+                  ><span> － </span> Durant</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none d-block" href="#"
+                  ><span> － </span> James</a
+                >
+              </li>
+            </ul>
+          </div>
           <!-- 產品圖 -->
-            <div class="col col-lg-9">
-              <div class="row row-cols-2 row-cols-lg-3 g-4">
-                <div class="col overflow-hidden">
-                  <div class="card w-100 position-relation" data-num="1">
-                    <div class="new_product_img">
-                      <h6 >Player</h6>
-                      <h4>Kobe Bryant</h4>
-                    </div>
-                    <img
-                      data-num="1"
-                      height="250"
-                      class="card-img of-cover"
-                      src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
-                      alt="new1"
-                    />
+          <div class="col col-lg-9 mb-5">
+            <div class="row row-cols-2 row-cols-lg-3 g-4">
+              <div class="col overflow-hidden">
+                <div class="card w-100 position-relation" data-num="1">
+                  <div class="new_product_img">
+                    <h6>Player</h6>
+                    <h4>Kobe Bryant</h4>
                   </div>
+                  <img
+                    data-num="1"
+                    height="312"
+                    width="312"
+                    class="card-img of-cover"
+                    src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
+                    alt="new1"
+                  />
                 </div>
-                <div class="col">
-                  <div class="card w-100 position-relation" data-num="2">
-                    <div class="new_product_img">
-                      <h6>Player</h6>
-                      <h4>Derrick Rose</h4>
-                    </div>
-                    <img
-                      data-num="2"
-                      height="250"
-                      class="card-img of-cover"
-                      src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
-                      alt="new2"
-                    />
+              </div>
+              <div class="col">
+                <div class="card w-100 position-relation" data-num="2">
+                  <div class="new_product_img">
+                    <h6>Player</h6>
+                    <h4>Derrick Rose</h4>
                   </div>
+                  <img
+                    data-num="2"
+                    height="312"
+                    width="312"
+                    class="card-img of-cover"
+                    src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
+                    alt="new2"
+                  />
                 </div>
-                <div class="col">
-                  <div class="card w-100 position-relation" data-num="3">
-                    <div class="new_product_img">
-                      <h6>Player</h6>
-                      <h4>Kevin Durant</h4>
-                    </div>
-                    <img
-                      data-num="3"
-                      height="250"
-                      class="card-img of-cover"
-                      src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
-                      alt="new3"
-                    />
+              </div>
+              <div class="col">
+                <div class="card w-100 position-relation" data-num="3">
+                  <div class="new_product_img">
+                    <h6>Player</h6>
+                    <h4>Kevin Durant</h4>
                   </div>
+                  <img
+                    data-num="3"
+                    height="312"
+                    width="312"
+                    class="card-img of-cover"
+                    src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
+                    alt="new3"
+                  />
                 </div>
-                <div class="col">
-                  <div class="card w-100 position-relation" data-num="4">
-                    <div class="new_product_img">
-                      <h6>Player</h6>
-                      <h4>Stephen Curry</h4>
-                    </div>
-                    <img
-                      data-num="4"
-                      height="250"
-                      class="card-img of-cover"
-                      src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
-                      alt="new4"
-                    />
+              </div>
+              <div class="col">
+                <div class="card w-100 position-relation" data-num="4">
+                  <div class="new_product_img">
+                    <h6>Player</h6>
+                    <h4>Stephen Curry</h4>
                   </div>
+                  <img
+                    data-num="4"
+                    height="312"
+                    width="312"
+                    class="card-img of-cover"
+                    src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
+                    alt="new4"
+                  />
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
 
       <!-- 徵才 -->
-      <div class="container-lg border-top border-nbaRed  border-3 mt-5">
+      <div class="container-lg border-nbaRed border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
         >
           <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img
-              class=""
-              height="130"
-              src="nbaWeb/1506074059.svg"
-              alt=""
-            />
+            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -191,7 +226,7 @@
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -204,10 +239,10 @@
           <img
             onmouseover="hover_custom(this);"
             onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-01.svg"
+            src="./nbaWeb/silhouette-basket-05.svg"
             alt=""
-            height="80"
-            width="100"
+            height="150"
+            width="150"
             class="custom_img_after position-fixed bottom-0 end-0"
             data-bs-toggle="tooltip"
             data-bs-placement="top"
