--- a/customzied.html
+++ b/customzied.html
@@ -17,18 +17,18 @@
       >
         <!-- 包品牌 -->
         <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex ">
+          <div class="d-flex">
             <div>
               <a class="navbar-brand" href="#"> JerseyTown </a>
             </div>
             <a class="align-self-center text-decoration-none" href="">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2 ">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
           <div class="ms-3">
             <button
-              class="navbar-toggler "
+              class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
           </div>
           <!--  -->
@@ -45,21 +45,32 @@
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link p-3 active" aria-current="page" href="#">Home</a>
+              <li class="nav-item">
+                <a
+                  class="nav-link p-3 active"
+                  aria-current="page"
+                  href="home.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3 " href="#Service">Service</a>
+                <a class="nav-link p-3" href="register.html">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Product">Product</a>
+                <a class="nav-link p-3" href="newproduct.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Rank">Rank</a>
+                <a class="nav-link p-3" href="allstar.html">Rank</a>
               </li>
               <li class="hvr-grow-shadow ms-1">
-                <button class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed">
-                  <a class="text-decoration-none text-white" type="submit">
+                <button
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
+                >
+                  <a
+                    class="text-decoration-none text-white"
+                    type="submit"
+                    href="home.html"
+                  >
                     Customized
                   </a>
                 </button>
@@ -68,98 +79,268 @@
           </div>
         </div>
       </nav>
+      <!-- banner -->
+      <div class="custom_banner bgp-top bgs-cover"></div>
+      <!-- 募款 -->
+      <!-- row 都加 flex-row 比較清楚~~~ -->
+      <div
+        id="Service"
+        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-md-2 pt-5 mx-md-5 px-md-5 mx-1 px-1 g-5"
+      >
+        <div
+          class="col d-flex align-items-center justify-content-center me-md-5"
+        >
+          <img
+            class="of-cover money_img w-100"
+            height="486"
+            width="648"
+            src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
+            alt="義賣球衣"
+          />
+        </div>
+        <div class="col" style="width: 380px">
+          <div class="money w-100">
+            <p class="fs-4 text-pickYellow">Service</p>
+            <h2 class="text-nbaBlue">EVERYBODY FUNDRAISING</h2>
+            <p class="fs-6">
+              The Association of Jersey Charities exists to provide guidance to
+              and be a source of funding for its members. <br />
+              <br />
+              Registered Jersey <br />
+              charities and other charities registered as charities under the
+              law of the United Kingdom, <br />
+              on the basis the charity carries out <br />
+              substantial charity activities in or from within Jersey
+              <br />
+              welcome to apply to be members. <br />
+            </p>
+          </div>
+        </div>
+      </div>
       <!-- 最新球衣 -->
-      <div id="Product" class="new_product text-center my-5">
-        <span>NEW</span>
+      <div
+        id="Product"
+        class="my-5 d-flex justify-content-center align-items-center text-nbaRed"
+      >
+        <h2>NEW</h2>
         <img
           src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
           height="80"
           alt="recentlyLogo"
           class=""
         />
-        <span>PRODUCTS</span>
+        <h2>PRODUCTS</h2>
       </div>
-      <div class="container px-5">
-        <div class="row row-cols-2 row-cols-lg-4 g-4">
-          <div class="col overflow-hidden">
-            <div class="card w-100 position-relation" data-num="1">
-              <div class="new_product_img">
-                <h6 >Player</h6>
-                <h4>Kobe Bryant</h4>
-              </div>
-              <img
-                data-num="1"
-                height="250"
-                class="card-img of-cover"
-                src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
-                alt="new1"
-              />
+      <div class="row row-cols-2 row-cols-lg-4 g-4 px-3">
+        <div class="col overflow-hidden">
+          <div class="card w-100 position-relation" data-num="1">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Kobe Bryant</h4>
+            </div>
+            <img
+              data-num="1"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
+              alt="new1"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="2">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Derrick Rose</h4>
+            </div>
+            <img
+              data-num="2"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
+              alt="new2"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="3">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Kevin Durant</h4>
+            </div>
+            <img
+              data-num="3"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
+              alt="new3"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-100 position-relation" data-num="4">
+            <div class="new_product_img">
+              <h6>Player</h6>
+              <h4>Stephen Curry</h4>
+            </div>
+            <img
+              data-num="4"
+              height="312"
+              width="312"
+              class="card-img of-cover"
+              src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
+              alt="new4"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center mt-4">
+        <a
+          type="button"
+          href=""
+          class="btn btn-outline-nbaBlue rounded-pill me-3 fs-5"
+          >SEE MORE PRODUCT</a
+        >
+        <a type="button" href="" class="btn btn-nbaRed rounded-pill fs-5"
+          >CUSTOMIZED JERSEY</a
+        >
+      </div>
+
+      <!-- 銷售排行 -->
+      <div
+        id="Ranking"
+        class="d-flex justify-content-center align-items-center text-nbaRed mt-5"
+      >
+        <h2>TOP</h2>
+        <img
+          src="nbaWeb/Lovepik_com-401319703-basketball.png"
+          height="80"
+          alt="sellLogo"
+          class=""
+        />
+        <h2>SELLING</h2>
+      </div>
+      <p class="fs-6 text-pickBlack text-center mb-5">
+        which are the top-selling NBA jerseys?
+      </p>
+      <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
+        <div class="col mb-5 mb-lg-0">
+          <div class="card position-relative shadow" style="height: 424px">
+            <img
+              data-num="001"
+              src="nbaWeb/PNG-images-NBA-Players-41png.png"
+              height="300"
+              class="card-img-top of-none op-top position-absolute mt-n5"
+              alt="..."
+            />
+            <div data-num="001" class="img_back img_back001"></div>
+            <div class="card-body">
+              <h3 class="card-title fw-bold fs-6">kobe bryant</h3>
+              <p class="card-text fs-6">
+                Bryant won five NBA championships, was an 18-time All-Star, a
+                15-time member of the All-NBA Team, a 12-time member of the
+                All-Defensive Team, the 2008 NBA Most Valuable Player (MVP), and
+                a two-time NBA Finals MVP. Bryant also led the NBA in scoring
+                twice, and ranks fourth in league all-time regular season and
+                postseason scoring. He was posthumously voted into the Naismith
+                Memorial Basketball Hall of Fame in 2020 and named to the NBA
+                75th Anniversary Team in 2021.
+              </p>
+            </div>
+            <div class="sell_more">
+              <a
+                href="#"
+                class="d-block text-center text-decoration-none link-pick_black pb-2"
+                >MORE</a
+              >
             </div>
           </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="2">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Derrick Rose</h4>
-              </div>
-              <img
-                data-num="2"
-                height="250"
-                class="card-img of-cover"
-                src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
-                alt="new2"
-              />
+        </div>
+        <div class="col mb-5 mb-lg-0">
+          <div class="card position-relative shadow" style="height: 424px">
+            <img
+              data-num="002"
+              src="nbaWeb/PNG-images-NBA-Players-28png.png"
+              height="300"
+              class="card-img-top of-none op-top position-absolute mt-n5"
+              alt="..."
+            />
+            <div data-num="002" class="img_back img_back002"></div>
+            <div class="card-body">
+              <h3 class="card-title fw-bold fs-6">LeBron James</h3>
+              <p class="card-text fs-6">
+                James has won four NBA championships, four NBA MVP awards, four
+                NBA Finals MVP awards, three All-Star MVP awards, and two
+                Olympic gold medals. James has scored the most points in the
+                playoffs, the second most career points, and has the seventh
+                most career assists.
+              </p>
+            </div>
+            <div class="sell_more">
+              <a
+                href="#"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 stretched-link"
+                >MORE</a
+              >
             </div>
           </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="3">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Kevin Durant</h4>
-              </div>
-              <img
-                data-num="3"
-                height="250"
-                class="card-img of-cover"
-                src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
-                alt="new3"
-              />
+        </div>
+        <div class="col mb-5 mb-lg-0">
+          <div class="card position-relative shadow" style="height: 424px">
+            <img
+              data-num="003"
+              src="nbaWeb/PNG-images-NBA-Players-1png.png"
+              height="300"
+              class="card-img-top of-none op-top position-absolute mt-n5"
+              alt="..."
+            />
+            <div data-num="003" class="img_back img_back003"></div>
+            <div class="card-body">
+              <h3 class="card-title fw-bold fs-6">Stephen Curry</h3>
+              <p class="card-text fs-6">
+                Curry won his first league MVP award and led the Warriors to
+                their first championship since 1975. The following season, he
+                became the first player to be elected MVP by a unanimous vote
+                and lead the league in scoring while shooting above 50–40–90.
+                That same year, the Warriors broke the record for the most wins
+                in an NBA season en route to reaching the 2016 NBA Finals, which
+                they lost to the Cleveland Cavaliers in seven games.
+              </p>
             </div>
-          </div>
-          <div class="col">
-            <div class="card w-100 position-relation" data-num="4">
-              <div class="new_product_img">
-                <h6>Player</h6>
-                <h4>Stephen Curry</h4>
-              </div>
-              <img
-                data-num="4"
-                height="250"
-                class="card-img of-cover"
-                src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
-                alt="new4"
-              />
+            <div class="sell_more">
+              <a
+                href="#"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
+                >MORE</a
+              >
             </div>
           </div>
         </div>
       </div>
 
+      <div class="sell_more text-center">
+        <a
+          type="button"
+          href="allstar.html"
+          class="btn btn-outline-nbaBlue rounded-pill my-5 fs-5"
+          >SEE MORE LISTS</a
+        >
+      </div>
       <!-- 徵才 -->
-      <div class="container-lg border-top border-nbaRed  border-3 mt-5">
+      <div class="container-lg border-nbaRed border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
         >
           <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img
-              class=""
-              height="130"
-              src="nbaWeb/1506074059.svg"
-              alt=""
-            />
+            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -174,7 +355,7 @@
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -187,10 +368,10 @@
           <img
             onmouseover="hover_custom(this);"
             onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-01.svg"
+            src="./nbaWeb/silhouette-basket-05.svg"
             alt=""
-            height="80"
-            width="100"
+            height="150"
+            width="150"
             class="custom_img_after position-fixed bottom-0 end-0"
             data-bs-toggle="tooltip"
             data-bs-placement="top"
