--- a/home.html
+++ b/home.html
@@ -46,7 +46,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link p-3 active" aria-current="page" href="home.html"
+                <a
+                  class="nav-link p-3 active"
+                  aria-current="page"
+                  href="home.html"
                   >Home</a
                 >
               </li>
@@ -61,9 +64,13 @@
               </li>
               <li class="hvr-grow-shadow ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
                 >
-                  <a class="text-decoration-none text-white" type="submit" href="customzied.html">
+                  <a
+                    class="text-decoration-none text-white"
+                    type="submit"
+                    href="home.html"
+                  >
                     Customized
                   </a>
                 </button>
@@ -91,7 +98,7 @@
             alt="義賣球衣"
           />
         </div>
-        <div class="col" style="width: 380px">
+        <div class="col" style="max-width: 380px">
           <div class="money w-100">
             <p class="fs-4 text-pickYellow">Service</p>
             <h2 class="text-nbaBlue">EVERYBODY FUNDRAISING</h2>
@@ -195,7 +202,7 @@
         <a
           type="button"
           href=""
-          class="btn btn-outline-nbaBlue rounded-pill me-3 fs-5"
+          class="btn btn-outline-nbaBlue rounded-pill fs-5 me-md-3 me-0 mb-3 mb-md-0"
           >SEE MORE PRODUCT</a
         >
         <a type="button" href="" class="btn btn-nbaRed rounded-pill fs-5"
@@ -315,7 +322,7 @@
         </div>
       </div>
 
-      <div class="sell_more text-center ">
+      <div class="sell_more text-center">
         <a
           type="button"
           href="allstar.html"
